--- a/src/scss/style_scss.scss
+++ b/src/scss/style_scss.scss
@@ -1,5 +1,8 @@
     $yellow: #e1a708;
     $bg: #091932;
+    $gradient_right: linear-gradient(115deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0) 70%, rgba(18, 50, 100, 0.5) 85%, rgba(255, 255, 255, 0) 100%);
+    $gradient_left: linear-gradient(115deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0) 15%, rgba(18, 50, 100, 0.5) 30%, rgba(255, 255, 255, 0) 45%, rgba(255, 255, 255, 0) 100%);
+    $gradient_center: linear-gradient(115deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0) 35%, rgba(18, 50, 100, 0.5) 50%, rgba(255, 255, 255, 0) 65%, rgba(255, 255, 255, 0) 100%);
     p,
     a,
     h1,
@@ -63,10 +66,12 @@
         float: left;
         display: inline;
         margin-top: 20px;
+        max-width: 935px;
+        width: 100%;
         height: 100%;
         .desc {
             float: right;
-            margin-top: 60px
+            margin-top: 20px;
         }
     }
     /* Logo */
@@ -85,7 +90,6 @@
     
     .menu {
         background: $yellow;
-        max-width: 935px;
         width: 100%;
         height: 48px;
         float: left;
@@ -121,7 +125,7 @@
     */
     /* Products */
     
-    .bg-products {
+     .bg-products {
         background: #01050e;
         width: 100%;
         margin: auto;
@@ -239,22 +243,11 @@
     
     #map {
         width: 100%;
-        height: 419px;
+        height: 418px;
         float: left;
         margin-top: 20px;
     }
     /* Contact Buttons */
-    /*.button {
-  width: 305px;
-        height: 125px;
-  background: linear-gradient(115deg, rgba(255,255,255,0) 0%, rgba(255,255,255,0) 35%,  rgba(18, 50, 100, 0.4) 50%, rgba(255,255,255,0) 65%, rgba(255,255,255,0) 100%);
-  
-  box-sizing: border-box;
-  border: 1px solid #123264;
-}
-.button:hover{
-  background: url('http://xcelesx.github.io/moto-max/img/email.png') no-repeat, rgb(37, 141, 200) linear-gradient(115deg, rgba(255,255,255,0) 0%, rgba(255,255,255,0) 35%,  rgba(18, 50, 100, 0.4) 50%, rgba(255,255,255,0) 65%, rgba(255,255,255,0) 100%);
-}*/
     
     .button {
         clear: both;
@@ -263,29 +256,30 @@
         box-sizing: border-box;
         border: 1px solid #123264;
         width: 100%;
-        height: 125px;
+        height: 126px;
         font-weight: bold;
-        line-height: 125px;
+        line-height: 126px;
         text-align: center;
         font-size: 16px;
         text-shadow: 0.2em 0.2em 0.5em black;
+        transition: .5s background linear;
         &--localization {
-            background: linear-gradient(115deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0) 70%, rgba(18, 50, 100, 0.5) 85%, rgba(255, 255, 255, 0) 100%);
+            background: $gradient_right;
         }
         &--localization:hover {
-            background: rgb(37, 141, 200) linear-gradient(115deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0) 70%, rgba(18, 50, 100, 0.5) 85%, rgba(255, 255, 255, 0) 100%);
+            background: rgb(37, 141, 200) $gradient_right;
         }
         &--phone {
-            background: linear-gradient(115deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0) 15%, rgba(18, 50, 100, 0.5) 30%, rgba(255, 255, 255, 0) 45%, rgba(255, 255, 255, 0) 100%);
+            background: $gradient_left;
         }
         &--phone:hover {
-            background: rgb(37, 141, 200) linear-gradient(115deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0) 15%, rgba(18, 50, 100, 0.5) 30%, rgba(255, 255, 255, 0) 45%, rgba(255, 255, 255, 0) 100%);
+            background: rgb(37, 141, 200) $gradient_left;
         }
         &--email {
-            background: linear-gradient(115deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0) 35%, rgba(18, 50, 100, 0.5) 50%, rgba(255, 255, 255, 0) 65%, rgba(255, 255, 255, 0) 100%);
+            background: $gradient_center;
         }
         &--email:hover {
-            background: rgb(37, 141, 200) linear-gradient(115deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0) 35%, rgba(18, 50, 100, 0.5) 50%, rgba(255, 255, 255, 0) 65%, rgba(255, 255, 255, 0) 100%);
+            background: rgb(37, 141, 200) $gradient_center;
         }
     }
     /* Footer */
@@ -298,6 +292,7 @@
         overflow: hidden;
         a {
             color: #123264;
+            transition: .5s color linear;
         }
         a:hover {
             color: #fff;
@@ -309,6 +304,11 @@
     }
     
     @media (min-width: 480px) {
+        header {
+            .desc {
+                margin-top: 62px;
+            }
+        }
         .slider {
             clear: both;
             display: block;
@@ -371,6 +371,8 @@
             }
         }
         .products__box {
+            
+            float: left;
             &:hover .triangle::after {
                 content: '';
                 display: inline-block;
@@ -385,22 +387,22 @@
         }
         .button {
             &--localization {
-                background: url('../img/lokacja.png') no-repeat;
+                background: url('../img/lokacja.png') no-repeat left center, $gradient_right;
             }
             &--localization:hover {
-                background: url('../img/lokacja.png') no-repeat, rgb(37, 141, 200);
+                background: url('../img/lokacja.png') no-repeat left center, rgb(37, 141, 200) $gradient_right;
             }
             &--phone {
-                background: url('../img/telefon.png') no-repeat;
+                background: url('../img/telefon.png') no-repeat right center, $gradient_left;
             }
             &--phone:hover {
-                background: url('../img/telefon.png') no-repeat, rgb(37, 141, 200);
+                background: url('../img/telefon.png') no-repeat right center, rgb(37, 141, 200) $gradient_left;
             }
             &--email {
-                background: url('../img/email.png') no-repeat;
+                background: url('../img/email.png') no-repeat left center, $gradient_center;
             }
             &--email:hover {
-                background: url('../img/email.png') no-repeat, rgb(37, 141, 200);
+                background: url('../img/email.png') no-repeat left center, rgb(37, 141, 200) $gradient_center;
             }
         }
         .right {
@@ -417,14 +419,14 @@
                 float: right;
             }
         }
+        #map {
+            max-width: 610px;
+        }
         .button {
             width: 305px;
         }
         .right {
             max-width: 305px;
             float: right;
-        }
-        #map {
-            max-width: 610px;
         }
     }
