--- a/src/scss/style_scss.scss
+++ b/src/scss/style_scss.scss
@@ -22,8 +22,9 @@
     html {
         font-size: 62.5%;
     }
-    
+*{    font: inherit;}
     body {
+        
         background: $bg;
         margin: 0px;
         padding: 0px;
@@ -91,7 +92,7 @@
     .menu {
         background: $yellow;
         width: 100%;
-        height: 48px;
+        height: 100%;
         float: left;
         margin-top: 15px;
         text-align: center;
@@ -290,6 +291,9 @@
     }
     
     @media (min-width: 480px) {
+        .menu {
+            height: 48px;
+        }
         header {
             .desc {
                 margin-top: 62px;
